@@ -102,8 +102,9 @@ void MapLoader::load_map(Game& game, Map& map) {
       if (!EntityTypeInfo::can_be_stored_in_map_file(type)) {
         Debug::error("Illegal entity type in map file: " + EntityTypeInfo::get_entity_type_name(type));
       }
-      lua_context.create_map_entity_from_data(map, entity_data);
-      lua_pop(lua_context.get_internal_state(), 1);  // Discard the created entity on the stack.
+      if (lua_context.create_map_entity_from_data(map, entity_data)) {
+        lua_pop(lua_context.get_internal_state(), 1);  // Discard the created entity on the stack.
+      }
     }
   }
 }
