@@ -4,6 +4,7 @@ set(lua_test_maps
   "jumper_tests"
   "surface_tests"
   "all_entities"
+  "bugs/686_crash_door_item"
 )
 
 # Build the Solarus testing library.
@@ -80,7 +81,7 @@ foreach(test_main_file ${tests_main_files})
   if (${test_main_file} MATCHES "src/tests/RunLuaTest.cpp")
     # Lua test runner: add an individual test for each map.
     foreach(map_id ${lua_test_maps})
-      add_test("lua_${map_id}" "bin/${test_bin_file}" -no-audio -no-video -map=${map_id} "${CMAKE_CURRENT_SOURCE_DIR}/testing_quest")
+      add_test("lua/${map_id}" "bin/${test_bin_file}" -no-audio -no-video -map=${map_id} "${CMAKE_CURRENT_SOURCE_DIR}/testing_quest")
     endforeach()
   else()
     # Normal C++ test.
