@@ -12,6 +12,7 @@ _______________________________
 Engine changes
 --------------
 
+* Fix crash with doors whose opening condition is an item (#686).
 * Fix the size of custom entities supposed to be optional (#680).
 * Fix the hero's sprite reset to default ones when changing equipment (#681).
 * Fix animated tiles freezed when running a quest a second time (#679).
